; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_nm.c_print_archive_member_sysv.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_nm.c_print_archive_member_sysv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@undefined_only = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [35 x i8] c"\0A\0AUndefined symbols from %s[%s]:\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"\0A\0ASymbols from %s[%s]:\0A\0A\00", align 1
@print_width = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [81 x i8] c"Name                  Value   Class        Type         Size     Line  Section\0A\0A\00", align 1
@.str.3 = private unnamed_addr constant [97 x i8] c"Name                  Value           Class        Type         Size             Line  Section\0A\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @print_archive_member_sysv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_archive_member_sysv(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i64, i64* @undefined_only, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = call i8* @_(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %9 = load i8*, i8** %3, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 (i8*, ...) @printf(i8* %8, i8* %9, i8* %10)
  br label %17

12:                                               ; preds = %2
  %13 = call i8* @_(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %14 = load i8*, i8** %3, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 (i8*, ...) @printf(i8* %13, i8* %14, i8* %15)
  br label %17

17:                                               ; preds = %12, %7
  %18 = load i32, i32* @print_width, align 4
  %19 = icmp eq i32 %18, 32
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = call i8* @_(i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str.2, i64 0, i64 0))
  %22 = call i32 (i8*, ...) @printf(i8* %21)
  br label %26

23:                                               ; preds = %17
  %24 = call i8* @_(i8* getelementptr inbounds ([97 x i8], [97 x i8]* @.str.3, i64 0, i64 0))
  %25 = call i32 (i8*, ...) @printf(i8* %24)
  br label %26

26:                                               ; preds = %23, %20
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i8* @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
